src/App.css
/* ... */
@media only screen and (max-width: 1024px) {

  .user-form {
    width: 90%;
  }

  .form-container {
    width: 45%;
  }

  .create-container {
    width: 90%;
  }

  .create-form-container {
    width: 80%;
  }

  .create-form-container form {
    width: 100%;
  }

  .blog-post__container {
    max-width: 80%;
  }
}

@media only screen and (max-width: 769px) {
  .home-container {
    width: 90%;
  }

  .blog-card {
    width: 80%;
  }

  .card-container__content__title h1 {
    color: rgb(41, 39, 39);
    font-size: 1.4rem;
  }

  .card-container__content__title p {
    font-size: 3rem;
  }

  .card-container__content__body p {
    font-size: .7em;
  }

  .card-container__content__footer p {
    font-size: .6em;
  }

  .card-container {
    width: 80%;
  }

  .user-form {
    width: 90%;
  }

  .form-container {
    width: 55%;
  }

  .nav ul {
    max-width: 100%;
  }

  .create-container {
    width: 100%;
  }

  .create-form-container {
    width: 100%;
  }

  .create-form-container form {
    width: 100%;
  }

  .blog-post__container {
    max-width: 90%;
    padding: 0 2em;
  }
}

@media only screen and (max-width: 480px) {
  .home-container {
    width: 100%;
  }

  .blog-card {
    width: 90%;
  }

  .card-container__content__title h1 {
    color: rgb(41, 39, 39);
    font-size: 1rem;
  }

  .card-container {
    width: 90%;
  }

  .user-form {
    width: 90%;
  }

  .form-container {
    width: 95%;
  }

  .nav ul #hamburger-btn {
    display: block;
  }

  .nav ul li {
    display: none;
  }

  .create-container {
    width: 100%;
  }

  .create-form-container {
    width: 100%;
    padding: 0 1em;
  }

  .create-form-container form {
    width: 100%;
    padding: 1.5em;
  }

  .blog-post__container {
    max-width: 100%;
    padding: 0 2em;
  }

}

